@@ -1889,7 +1889,6 @@ func_all_modules ()
   func_module getloadavg
   func_module getpagesize
   func_module getusershell
-  func_module gnu-source
   func_module physmem
   func_module posixver
   func_module quotearg
