@@ -1,18 +1,0 @@
-Description:
-Enable GNU extensions in standard headers
-
-Files:
-m4/gnu-source.m4
-
-Depends-on:
-
-configure.ac:
-AC_GNU_SOURCE
-
-Makefile.am:
-
-Include:
-
-Maintainer:
-Paul Eggert and Jim Meyering
-
